be compiled with it. egcs-1.1.2 has register allocation problems in very
obscure cases. We have ensured the kernel does not trip these in any known
situation. The 2.5 tree is likely to drop egcs-1.1.2 workarounds.

The Red Hat gcc 2.96 compiler subtree can also be used to build this tree.
You should ensure you use gcc-2.96-74 or later. gcc-2.96-54 will not build
the kernel correctly.

gcc 4 is not supported.

In addition, please pay attention to compiler optimization.  Anything
greater than -O2 may not be wise.  Similarly, if you choose to use gcc-2.95.x
or derivatives, be sure not to use -fstrict-aliasing (which, depending on
your version of gcc 2.95.x, may necessitate using -fno-strict-aliasing).

Make
----

You will need Gnu make 3.77 or later to build the kernel.

Binutils
--------

Linux on IA-32 has recently switched from using as86 to using gas for
assembling the 16-bit boot code, removing the need for as86 to compile
your kernel.  This change does, however, mean that you need a recent
release of binutils.

If you can, upgrade to the latest 2.9.5 or 2.1x binutils release.  Older
releases such as 2.8, 2.8.xx, and the FSF's 2.9.1 should be avoided if
at all possible.  The later releases of 2.9.1.0.x (anything where x >= 22)
can and do compile the kernel properly, but there are many benefits in
upgrading to 2.9.5 or 2.1x if you're up to it.

System utilities
================

Architectural changes
---------------------

DevFS is now in the kernel.  See Documentation/filesystems/devfs/* in
the kernel source tree for all the gory details.

The Logical Volume Manager (LVM) is now in the kernel.  If you want to
use this, you'll need to install the necessary LVM toolset.

32-bit UID support is now in place.  Have fun!

Linux documentation for functions is transitioning to inline
documentation via specially-formatted comments near their
definitions in the source.  These comments can be combined with the